cicd/weather-dashboard/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-dashboard
spec:
  type: ClusterIP
  selector:
    app: weather-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
